# telegram-downloader

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-assets.yml
python/: .env.example  telegram_downloader.py
src/: app.rs  config.rs  download.rs  lib.rs  main.rs  progress.rs
tests/: config_tests.rs  download_tests.rs  progress_tests.rs
tests/common/: mod.rs
