[package]
name = "telegram-downloader-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
env_logger = "0.11"
futures-util = "0.3"
grammers-client = "0.8.1"
grammers-mtsender = "0.8.1"
grammers-session = "0.8.0"
log = "0.4"
once_cell = "1"
rpassword = "7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util"] }
